backend/src/services/custom_configs/snapshots/assert_yaml_snapshot@custom_config.snap
---
source: src/services/custom_configs/base.rs
assertion_line: 217
expression: config
---
CustomConfigInner {
    bank_data_linking: Some(
        BankDataLinkingConfig {
            enabled: true,
            secret_id: "test_id",
            secret_key: "test_key",
            api_url: "https://test.test",
        },
    ),
}
